2009-12-24  Sridhar Ratnakumar  <sridhar.ratna@gmail.com>

	* src/asm-listing.c: Add project webpage to listing (for network
	effects)

2009-12-24  Onkar Shinde  <onkarshinde@gmail.com>

	* installer.nsi.in: Add commands to make example files read only.
	Remove exclusion of svn directories. We are not using svn anymore. :-)
	* WINDOWS-PORT.txt: We need GTK+ 2.12 only. So modify download
	instructions accordingly.
	* src/interface.c: Fix button mnemonics not getting set on starting
	dialog in latest GTK version.

2009-12-23  Onkar Shinde  <onkarshinde@gmail.com>

	* src/callbacks.[c,h], src/gui-editor.[c,h], src/interface.c: Add basic
	printing support to assembly listing window. Print settings are not saved.
	* src/callbacks.c, src/asm-listing.c: Make the text view in assembly
	listing read only. Update the message at the top accordingly.
	* src/interface.c: Remove the images used in 'Registers' and 'Flag' boxes.
	They really have no significance.
	* po/gnusim8085.pot: Auto updated with 'make dist'.
	* doc/examples/*.asm: Replace unnecessary tabs with spaces. Makes
	programs easy on eyes in the small editor area.

2009-12-20  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-keypad.c: Process keypad button events only when the mode is
	not debug. Fixes SF #2462607.
	* src/interface.c: Add certain size to assembler listing window. Fixes
	SF #1942893.
	* data/8085asm.lang: Add sp to the list of registers. Fixes SF #2582426.
	* Makefile.[am,in], GNUSim8085.desktop.in: Merge patches from Debian.

2009-12-19  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-app.c, src/gui-keypad.c, src/gui-list-message.c,
	src/interface.c: Swap horizontal and vertical panes for better
	arrangement of widgets. Provides more vertical and slightly more
	horizontal area to the editor.

2009-07-16  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/asm-genobj.c: iAdded more description invalid operand error
	message.
	* src/gui-list-message.c: Fixed wrong line highlight issue.
