@@ -1,5 +1,6 @@
 *.[oa]
 *~
+.*.swp
 config.h
 config.log
 config.status
