@@ -15,3 +15,5 @@ Krishna Bharadwaj <krishna@krishnabharadwaj.info>
 Madhusudan C.S <madhusudancs@gmail.com>
 Marcelo Souza <m_souza@users.sourceforge.net>
 Missouga Dongi <zelea2@users.sourceforge.net>
+Pruneeth Bhat
+
